# new-repository-template

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Claude.md  README.md  SETUP.md  VAQUUM_AGENT_RULEBOOK.md  VAQUUM_PR_GUIDELINE.md  VAQUUM_REPO_SPECIFICS.md  governance.yml  pyproject.toml  wrangler.jsonc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  coverage_budget.json  fail_loud_budget.json  module_budgets.json  typing_budget.json
.github/ISSUE_TEMPLATE/: incident_post_mortem.md  incident_report.yml  rfc_template.md  slice.yml
.github/rulesets/: main.json
.github/workflows/: audit_main_ruleset.yml  bootstrap_repository.yml  codeql-analysis.yml  copy-standard-labels.yml  deploy_on_merge.yml  pr_checks_cc.yml  pr_checks_codeql.yml  pr_checks_fail_loud.yml  pr_checks_honesty.yml  pr_checks_lint.yml  pr_checks_ruff.yml  pr_checks_ruleset.yml  pr_checks_slice.yml  pr_checks_slice_on_issue.yml  pr_checks_slice_sweep.yml  pr_checks_tests.yml  pr_checks_typing.yml  pr_checks_version.yml  pr_merge_readiness.yml  setup-new-repo.yml  slice_closeout_guard.yml
docs/: README.md
docs-site/: .gitignore  README.md  docs-map.json  docusaurus.config.js  package-lock.json  package.json  playwright.config.js  product-docs.json
docs-site/scripts/: assemble-docs.mjs  audit-report.mjs  audit-security.mjs  check-external-links.mjs  lint-markdown.mjs  repository-paths.mjs  site-urls.mjs  verify-build.mjs
docs-site/src/css/: custom.css
docs-site/tests/: assemble-docs.test.mjs  docs.spec.js
docs/Developer/: Documentation-System.md  README.md
docs/Guides/: README.md
docs/Reference/: README.md
governance/: _common.py  bootstrap_repository.py  cc_gate.py  check_budget_ratchet.py  check_coverage_floor.py  check_coverage_ratchet.py  check_dependency_vulnerabilities.py  check_diff_coverage.py  check_docstrings.py  check_file_size_balance.py  check_module_budgets.py  check_module_docstrings.py  check_no_swallowed_violations.py  check_test_code_ratio.py  check_test_fallbacks.py  fail_loud_gate.py  privileged_ruleset_audit.py  ruleset_gate.py  slice_gate.py  typing_gate.py  version_gate.py
governance/tests/: conftest.py  test_agent_rulebook.py  test_bloat_gate_mutation.py  test_bloat_gates_contract.py  test_bootstrap_rewrite.py  test_bootstrap_workflow_contract.py  test_cc_gate.py  test_ci_contract.py  test_codeowners.py  test_codeql_fallback.py  test_coverage_ratchet.py  test_dependency_vulnerabilities.py  test_diff_coverage.py  test_docs_scaffold.py  test_docstrings.py  test_fail_loud_gate.py  test_governance_config.py  test_lint_ci_contract.py  test_no_swallowed_violations.py  test_privileged_ruleset_audit.py  test_repository_law.py  test_ruleset_gate.py  test_slice_gate.py  test_supply_chain.py  test_test_fallbacks.py  test_tests_ci_contract.py  test_version_gate.py
governance/tests/fixtures/github/: ruleset_live_target.json  ruleset_live_target_without_bypass_actors.json  ruleset_live_unexpected_field.json  ruleset_live_with_bypass_actor.json
governance/tests/fixtures/lint/: bad_imports.py
new_repository_template/: README.md  __init__.py  expression.py  probe_marker.py  probe_sequence.py  report_command.py  report_store.py
requirements/ci/: build-tools.in  build-tools.txt  dev-env.in  dev-env.txt  gate-tools.in  gate-tools.txt  runtime-env.in  runtime-env.txt
scripts/: __init__.py  check_coverage_floor.py  check_diff_coverage.py  check_docstrings.py  check_file_size_balance.py  check_module_budgets.py  check_module_docstrings.py  check_no_swallowed_violations.py  check_test_code_ratio.py  check_test_fallbacks.py
tests/fixtures/github/: ruleset_live_target.json  ruleset_live_with_bypass_actor.json
tests/fixtures/lint/: bad_imports.py
tests/honesty/: test_repository_law.py
tests/package/: test_expression.py  test_import.py  test_probe_marker.py  test_probe_sequence.py  test_report_command.py  test_report_store.py
tests/tools/: test_bloat_gate_mutation.py  test_bloat_gates_contract.py  test_bootstrap_rewrite.py  test_bootstrap_workflow_contract.py  test_cc_gate.py  test_ci_contract.py  test_codeql_fallback.py  test_diff_coverage.py  test_docstrings.py  test_fail_loud_gate.py  test_lint_ci_contract.py  test_no_swallowed_violations.py  test_privileged_ruleset_audit.py  test_ruleset_gate.py  test_slice_gate.py  test_test_fallbacks.py  test_version_gate.py
tools/: bootstrap_repository.py  cc_gate.py  fail_loud_gate.py  slice_gate.py  typing_gate.py  version_gate.py
