[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "new-repository-template"
version = "0.16.0"
description = "Gate-enforced Python repository template."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff==0.15.11",
  "pyright==1.1.408",
  "vulture>=2.14",
  "coverage[toml]>=7.6",
  "pyyaml>=6.0",
  "pip-audit>=2.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["new_repository_template*"]
exclude = ["tests*", "demo*"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["new_repository_template"]
exclude = [
  "**/__pycache__",
  "build",
  "dist",
  "tests",
  "demo",
]
# governance/ is not type-checked in CI (include is the package), but listing it
# here lets the editor resolve the gates' bare `import _common` sibling import.
extraPaths = ["governance"]
stubPath = "stubs"
reportExplicitAny = "error"
reportMissingImports = "error"
reportMissingTypeStubs = "error"
reportUnknownArgumentType = "error"
reportUnknownMemberType = "error"
reportUnknownVariableType = "error"
reportUnknownLambdaType = "error"
reportUnknownParameterType = "error"
reportMissingParameterType = "error"
reportConstantRedefinition = "error"
reportImportCycles = "error"

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  "demo",
  "governance/tests/fixtures",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "RUF",
  "BLE",
  "ANN",
  "C901",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "T201",
  "FIX001",
  "FIX002",
  "FIX003",
  "FIX004",
  "ERA001",
  "D200",
  "D205",
  "D415",
  "PIE790",
]
ignore = [
  "E501",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 12
max-statements = 50

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101", "ANN", "BLE001",
  "PLR0912", "PLR0913", "PLR0915",
  "D200", "D205", "D415",
]
"governance/*.py" = [
  "C901", "PLR0912", "PLR0913", "PLR0915",
  "T201",
  "FIX001", "FIX002", "FIX003", "FIX004",
  "ERA001", "D200", "D205", "D415",
]
"governance/tests/**/*.py" = [
  "S101", "ANN", "BLE001",
  "PLR0912", "PLR0913", "PLR0915",
  "D200", "D205", "D415",
]

[tool.ruff.lint.isort]
known-first-party = ["governance", "new_repository_template"]

[tool.vulture]
paths = ["new_repository_template"]
min_confidence = 80

[tool.coverage.run]
branch = true
source = ["new_repository_template"]

[tool.coverage.report]
show_missing = true

[tool.coverage.json]
output = "coverage.json"
